--- a/project.html
+++ b/project.html
@@ -113,8 +113,7 @@
 <div class="container-fluid py-5">
     <div class="container py-5">
         <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-            <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Licence</h5>
-            <h1 class="display-5">Our recently completed projects</h1>
+            <h class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Our Licence</h1>
         </div>
         <div class="row g-5">
             <div class="pdf-links" style="text-align: center; background-color: #000; color: #fff; padding: 20px; border-radius: 10px;">
