--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
         <div class="container-fluid py-5">
             <div class="container py-5">
                 <div class="text-center mb-5 wow fadeInUp" data-wow-delay=".3s">
-                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Catch US Map</h5>
+                    <h5 class="mb-2 px-3 py-1 text-dark rounded-pill d-inline-block border border-2 border-primary">Catch US On Map</h5>
                 </div>
                 <div class="row g-5 mb-5">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay=".3s">
