--- a/index.html
+++ b/index.html
@@ -497,9 +497,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                            <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
-                            <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
-                            <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
+                            <div class="d-flex flex-column align-items-start">
+                                <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>📞Call Us</a>
+                                <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>📍Location</a>
+                                <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>📧Mail Us</a>
                         </div>
                     </div>
                 </div>
