--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="text-end pe-4 me-4 border-end border-dark search-btn">
                         <div class="search-form">
-                            <form method="post" action="index.html">
+                            <form method="post" action="https://briskpestmanagementservices.github.io/404.html">
                                 <div class="form-group">
                                     <div class="d-flex">
                                         <input type="search" class="form-control border-0 rounded-pill" name="search-input" value="" placeholder="Search Here" required=""/>
