--- a/index.html
+++ b/index.html
@@ -51,39 +51,6 @@
             <div class="spinner-grow text-primary" role="status"></div>
         </div>
         <!-- Spinner End -->
-
-        <!-- Topbar Start -->
-        <div class="container-fluid topbar-top bg-primary">
-            <div class="container">
-                <div class="d-flex justify-content-between topbar py-2">
-                    <div class="d-flex align-items-center flex-shrink-0 topbar-info">
-                        <a href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8" class="me-4 text-secondary"><i class="fas fa-map-marker-alt me-2 text-dark"></i>VIEW MAP</a>
-                        <a href="tel:+919900102056" class="me-4 text-secondary"><i class="fas fa-phone-alt me-2 text-dark"></i>CALL US</a>
-                        <a href="mailto:info.briskpestmanagement@gmail.com" class="text-secondary"><i class="fas fa-envelope me-2 text-dark"></i>MAIL US</a>
-                    </div>
-                    <div class="text-end pe-4 me-4 border-end border-dark search-btn">
-                        <div class="search-form">
-                            <form method="post" action="https://briskpestmanagementservices.github.io/404.html">
-                                <div class="form-group">
-                                    <div class="d-flex">
-                                        <input type="search" class="form-control border-0 rounded-pill" name="search-input" value="" placeholder="Search Here" required=""/>
-                                        <button type="submit" value="Search Now!" class="btn"><i class="fa fa-search text-dark"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                    <div class="d-flex align-items-center justify-content-center topbar-icon">
-                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Topbar End -->
-
-
         <!-- Navbar Start -->
         <div class="container-fluid bg-dark">
             <div class="container">
@@ -154,7 +121,7 @@
 </head>
 <body>
         <div align="center">
-        <img src="img/brisklogo.png" alt="Brisk Pest Control" length="60", width="30%">
+        <img src="img/BriskWelcome78.gif" alt="Brisk Pest Control" length="60", width="30%">
       </div>
     </div>
   </div>
