--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 </head>
 <body>
         <div align="center">
-        <img src="img/BriskWelcome78.gif" alt="Brisk Pest Control" length="60", width="30%">
+        <img src="img/BriskWelcomePage5.gif" alt="Brisk Pest Control" length="60", width="30%">
       </div>
     </div>
   </div>
