--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <div class="project-item">
                     <div class="project-left bg-dark"></div>
                     <div class="project-right bg-dark"></div>
-                    <img src="img/project-1.jpg" class="img-fluid h-100" alt="img">
+                    <img src="BriskSrcFolder/BriskRodent.gif" class="img-fluid h-100" alt="img">
                     <div class="project-details">
                         <a href="" class="fs-4 fw-bold text-center">Rodent Control</a>
                         <p class="fs-6 text-center">Fast, eco Rodent Control for a pest-free space!</p>
